# omnissiah

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
docs/: DEFAULTS-RATIONALE.md
docs/dev/: BUILD-SPEC.md
omnissiah/: __init__.py  cli.py  render.py
templates/: AGENTS.md.tmpl  ASSISTANT-PROFILE.md.tmpl  CLAUDE.md.tmpl  OPERATING-CONTRACT.md.tmpl  README.md.tmpl  SYSTEM-MAP.md.tmpl  env.example.tmpl  gitignore.tmpl  pyproject.toml.tmpl
templates/claude/agents/: capture-triage.md.tmpl
templates/claude/skills/brief/: SKILL.md.tmpl
templates/claude/skills/drain/: SKILL.md.tmpl
templates/docs/: harness-capabilities.md.tmpl
templates/docs/integrations/: SETUP.md.tmpl
templates/docs/playbooks/: README.md.tmpl
templates/pkg/: __init__.py.tmpl
templates/pkg/integrations/: __init__.py.tmpl  common.py.tmpl
templates/pkg/integrations/providers/: __init__.py.tmpl  base.py.tmpl  notes.py.tmpl
templates/pkg/mcp/: __init__.py.tmpl  server.py.tmpl
templates/tests/: test_providers.py.tmpl  test_server_tools.py.tmpl
templates/work/: README.md.tmpl
tests/: test_aliases.py  test_render_harness.py
