[project]
name = "omnissiah"
version = "0.1.0"
description = "Generator for bounded personal-assistant repos: governance layer plus a runnable provider-agnostic MCP server skeleton."
readme = "README.md"
requires-python = ">=3.10"
# Stdlib only. The generator itself has no third-party dependencies; the
# generated repos depend on mcp[cli], but Omnissiah does not.
dependencies = []

[project.scripts]
omnissiah = "omnissiah.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnissiah"]
